# praxis

./: .env.example  .gitignore  EDITOR.md  EMBEDDED_BROWSER.md  LOCAL_POSTGRES_MIGRATION.md  NEXT_STEPS.md  PRODUCT_IDENTITY.md  README.md  REQUIREMENTS_AND_DECISIONS.md  SETUP-SUPABASE.md  STACK.md  eslint.config.mjs  instruction.md  next.config.ts  package-lock.json  package.json  workLog.md
app/: globals.css  layout.tsx  page.tsx
app/actions/: channels.ts  files.ts  ideas.ts  links.ts  notes.ts  script-versions.ts  videos.ts  (+2 more)
backend/: README.md  alias-loader.mjs  server.ts
components/: praxis-shell.tsx  theme-toggle.tsx
desktop-launcher/: index.html
lib/: channel-categories.ts  episode.ts  use-right-panel-width.ts  video-status.ts
scripts/: backend-status.sh  desktop-runtime-status.sh  dev-split-frontend.sh  dev-tauri-native-managed.sh  dev-tauri-runtime.sh  dev-tauri.sh  download-supabase-files.mjs  export-supabase-data.mjs  frontend-status.sh  install-desktop-app.mjs  praxis-backend-env.sh  praxis-frontend-env.sh  prepare-desktop-bundle.mjs  smoke-backend-orchestration.sh  smoke-desktop-runtime.sh  smoke-local-runtime.mjs  start-backend.sh  start-desktop-runtime.sh  start-frontend.sh  stop-backend.sh  stop-desktop-runtime.sh  stop-frontend.sh
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.runtime-dev.conf.json
src-tauri/bundled/next/: package.json  server.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  runtime.rs  window_state.rs
supabase/: config.toml  manual_apply_videos_full.sql
(+97 files in other folders)
