[package]
name = "praxis_shell"
version = "0.1.0"
description = "Praxis desktop shell"
authors = ["Codex"]
edition = "2021"

[lib]
name = "praxis_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
